--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           name: Build front-end
           command: |
             cd frontend
-            npm cache clean -–force
+            npm cache clean -f
             npm install
             npm run build
       - save_cache:
@@ -62,7 +62,7 @@ jobs:
           name: Back-end build
           command: |
             cd backend
-            npm cache clean -–force
+            npm cache clean -f
             npm install
             npm run build
       - save_cache:
