--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,13 +55,20 @@ jobs:
               ]
             }
           event: always
-
-- slack/notify:
-	  event: fail
-	  template: basic_fail_1
-- slack/notify:
-	  event: pass
-	  template: success_tagged_deploy_1
+  notify-fails:
+    docker:
+      - image: "cimg/base:stable"
+    steps:
+      - slack/notify:
+        event: fail
+        template: basic_fail_1
+  notify-success:
+    docker:
+      - image: "cimg/base:stable"
+    steps:
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   build-frontend:
     docker:
@@ -359,3 +366,7 @@ workflows:
       #     requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
+  status:
+    jobs:
+    - notify-fails
+    - notify-success
