--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,10 +204,11 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            aws ec2 describe-instances \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters Name=tag:Name,Values=backend-$WORKFLOW_ID \
-              --output text >> inventory.txt
+            echo "[web]" > .circleci/ansible/inventory.txt | aws ec2 describe-instances \
+              --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query "Reservations[*].Instances[].PublicDnsName" \
+              --output text >> .circleci/ansible/inventory.txt
+            cat .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
