--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-  - name: "update apt packages."
+  - name: "upgrade packages."
     become: yes
     apt:
-      update_cache: yes
+      upgrade: "yes"
 
   - name: "install nodejs and npm"
     become: yes
