--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,8 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: 
-          - "49:06:d0:8b:b7:b8:09:9c:9c:00:03:71:7a:d5:12:c3"
+          fingerprints:
+            - "49:06:d0:8b:b7:b8:09:9c:9c:00:03:71:7a:d5:12:c3"
       - attach_workspace:
           at: ~/
       - run:
@@ -238,22 +238,31 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment
 
-#   run-migrations:
-#     docker:
-#       # Docker image here that supports NodeJS
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Run migrations
-#           command: |
-#             # Your code here
-#             exit 1
-#       - run:
-#           name: Send migration results to memstash
-#           command: |
-#             # Your code here
-#             exit 1
-#      # Here's where you will add some code to rollback on failure
+  run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: Run migrations
+          command: |
+            cd ~/project/backend
+            npm install
+            npm run migrations > migrations_dump.txt
+
+      - run:
+          name: Send migration results to memstash
+          command: |
+            cd ~/project/backend
+            if grep -q "has been executed successfully" migration_output
+            then
+              echo "Success"
+              
+            else
+              echo "Failure"
+              
+            fi
+      - destroy-environment
 
 #   deploy-frontend:
 #     docker:
@@ -375,8 +384,8 @@ workflows:
               only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
