--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,10 +257,9 @@ jobs:
             if grep -q "has been executed successfully" migration_output
             then
               echo "Success"
-              
+              curl https://kvdb.io/QtfZuBL9Hm9K127uLC4RZB/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             else
-              echo "Failure"
-              
+              echo "Failure"              
             fi
       - destroy-environment
 
