--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ commands:
           # Add when this will run
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = VALUE=$(curl -k https://kvdb.io/KWmftMr7VSgZreE7NA9w5h/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            $SUCCESS = $(curl -k https://kvdb.io/KWmftMr7VSgZreE7NA9w5h/migration_${CIRCLE_WORKFLOW_ID:0:7})
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -247,18 +247,17 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm run migrations > migrations_dump.txt
+            npm run migrations > migration_output
 
       - run:
           name: Send migration results to memstash
           command: |
             cd ~/project/backend
-            if grep -q "has been executed successfully" ~/project/backend/migrations_dump.txt
+            if grep -q "has been executed successfully" migration_output
             then
-              echo "Success"
               curl https://kvdb.io/KWmftMr7VSgZreE7NA9w5h/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             else
-              echo "Failure"              
+              curl https://kvdb.io/KWmftMr7VSgZreE7NA9w5h/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '0'             
             fi
       - destroy-environment
 
