--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -363,8 +363,8 @@ jobs:
             else
               return 1
             fi
-      - destroy_environment
-      - revert_migrations
+      - destroy-environment
+      - revert-migrations
 
 #   cloudfront-update:
 #     docker:
