--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -336,11 +336,7 @@ jobs:
       - run:
           name: Get backend url and smoke test
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-             --region us-west-2 \
-              --filters "Name=tag:Name, Values=backend-${CIRCLE_WORKFLOW_ID}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
+            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query "Reservations[*].Instances[].PublicIpAddress" --output text)
             echo ${BACKEND_IP}
             if curl "http://${BACKEND_IP}:3030/api/status" | grep "ok"
             then
