--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,25 +1,36 @@
 ---
-  - name: create directory 
-    become: yes
-    file: 
-      path: /home/app
-      state: directory
-      mode: 0755
+- name: create directory
+  become: yes
+  file:
+    path: /home/app
+    state: directory
+    mode: 0755
 
-  - name: copy artifact to app directory
-    become: yes
-    copy: 
-      src: ~/project/artifact.tar.gz
-      dest: /home/app/artifact.tar.gz
+- name: copy artifact to app directory
+  become: yes
+  copy:
+    src: ~/project/artifact.tar.gz
+    dest: /home/app/artifact.tar.gz
 
-  - name: uncompress
-    become: yes
-    shell: |
-      cd /home/app
-      tar -vxf artifact.tar.gz
-  - name: build and start node
-    shell: |
-      cd /home/app
-      npm install
-      pm2 stop default
-      pm2 start npm -- start
+- name: uncompress
+  become: yes
+  shell: |
+    cd /home/app
+    tar -vxf artifact.tar.gz
+- name: build and start node
+  shell: |
+    cd /home/app
+    npm install
+    pm2 stop default
+    pm2 start npm -- start
+  environment:
+    ENVIRONMENT: production
+    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+    TYPEORM_MIGRATIONS_DIR: "./migrations"
+    TYPEORM_MIGRATIONS: "./migrations/*.js"
+    TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
+    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+    TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
+    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
