--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,17 +307,17 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible nodejs tar gzip npm curl
+            apk add --update ansible nodejs tar gzip npm curl rsync openssh
       - run:
           name: Deploy backend
           command: |
-            cd backend
-            npm i
-            npm run build
-            cd ..
-            # Zip the directory
-            tar -C backend -czvf artifact.tar.gz .
-            cd .circleci/ansible
+            # cd backend
+            # npm i
+            # npm run build
+            # cd ..
+            # # Zip the directory
+            # tar -C backend -czvf artifact.tar.gz .
+            cd ~/project/.circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
