--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -235,7 +235,7 @@ jobs:
             cd ~/project/.circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
-       run:
+      - run:
           name: Configure node-exporter
           command: |
             cat .circleci/ansible/inventory.txt
